import changes from zhu

--- a/bigbluebutton-html5/imports/ui/components/app/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/app/styles.scss
@@ -6,7 +6,7 @@ $bars-padding: $lg-padding-x - .45rem; // -.45 so user-list and chat title is al
 $userlist-handle-width: 5px; // 5px so user-list and chat resize handle render as the same size
 
 .main {
-  position: fixed;
+  position: relative;
   height: 100%;
   width: 100%;
   display: flex;
